--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "start": "bun index.ts",
     "dev": "bun run --watch index.ts",
     "build": "bun build index.ts"
   },
